--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -24,8 +24,10 @@
 
 .label-figure-avatar > .label-avatar {
     background-color: rgb(135,17,108);
-    
+    padding: 5px 10px 5px 10px;
+    border-radius: 27px;
 }
+
 .navbar-brand{
     padding-top: inherit !important;
 }
