--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros/macroIdea.html' as macro_idea %}
 {% block title %}
     {{ super() }}
     index
@@ -6,5 +7,10 @@
 {% block content %}
     <div class="container">
         <h2>Ideas públicas...</h2>
+        <div class="row">
+            {% for idea in public_ideas %}
+                {{ macro_idea.render_idea(idea) }}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
